IN PROGRESS v0.6.1 - SVN

            Sunday December 28th, 2008

            New Features
            ------------

            * As part of ongoing work to make Freewheeling more reliable,
              crash reports are now automatically generated if GDB is installed. 
              The type of crash is printed on the terminal. The report is saved to file 'fweelin-stackdump'.
              
              If you encounter a crash, please send me this file along with a description of what you were doing
              when the crash occurred. Thank you.

            Fixes
            -----
            
            * Fixed an overdub crash with the new triggering method
            * Fixed a positioning bug when recording loops with the new triggering method

            Friday December 25th, 2008
                        
            New Features
            ------------

            * This version uses an experimental new way of triggering loops. The loops always play immediately when triggered,
              and they start in the right place. 
              
              The 'right place' is given by a 'long count', which is the overall pattern
              of all loops. This method allows switching between snapshots mid-phrase 
              without a loss of positioning, and triggering new snapshots before the downbeat to catch pickup notes. 
              
              Musically, the long count is the length of the larger musical phrase which is described by all the loops.
              Mathematically, the long count's length is the LCM (Lowest Common Multiple) of the length of all loops that have been 
              activated. 
              
              (Example) For a scene with loops with length 1, 2, 4, and 8 beats, the long count is 8 beats. 
              For a scene with loops length 4 and 3 beats, the long count is 12 beats.
              
              You don't really have to think about the long count. 